welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:3: error: not found: value x
  if(13 <= a && a <= 19){x = x+1}
                         ^countTeen:4: error: not found: value x
  if(13 <= b && c <= 19){x = x+1}
                         ^countTeen:5: error: not found: value x
  if(13 <= c && c <= 19){x = x+1}
                         ^countTeen:6: error: not found: value x
  if(13 <= d && d <= 19){x = x+1}
                         ^countTeen:6: error: type mismatch;
 found   : Unit
 required: Int
  if(13 <= d && d <= 19){x = x+1}
  ^